--- a/team.html
+++ b/team.html
@@ -336,7 +336,7 @@
                             </p>
                         </div>
                         <div class='member-bio collapse' id='norasaari-bio'>
-                            <p>Nadine is a Senior is Civil Engineering, originally from Belmont, MA but has now lived for the past two years in NJ. She wanted to join an engineering design team and was introduced to the Concrete Canoe team by Gina McGauley. She loves the water due to 4 years of rowing, and the Concrete Canoe team seems like the perfect fit! Outside of the team, she is part of the national community service fraternity Alpha Phi Omega and the Membership Officer for the Society of Women Engineers. Her other interests include traveling, pottery and Friends marathons.</p>
+                            <p>Nadine is a Senior is Civil Engineering and Environmental, originally from Belmont, MA but has now lived for the past two years in NJ. She wanted to join an engineering design team and was introduced to the Concrete Canoe team by Gina McGauley. She loves the water due to 4 years of rowing, and the Concrete Canoe team seems like the perfect fit! Outside of the team, she is part of the national community service fraternity Alpha Phi Omega and the Membership Officer for the Society of Women Engineers. Her other interests include traveling, pottery and Friends marathons.</p>
                         </div>
                     </div>
 
